<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Hunt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play!</string>
    <string name="next">Next!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account"><u>Create Account</u></string>

</resources>
