<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/header"
        android:id="@+id/header"/>
    <RelativeLayout
        android:layout_width="320dip"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/headerText"
            android:layout_width="match_parent"
            android:layout_height="30dip">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/hello_world"
                android:id="@+id/totalPoints"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/app_name"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:id="@+id/timerText"
                android:textSize="20sp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="320dip"
            android:src="@drawable/revolution_map"
            android:layout_below="@id/headerText"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text = "@string/app_name"
            android:layout_below="@id/map"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/nextButton"
            android:layout_width="200dip"
            android:layout_height="60dip"
            android:background="@color/forestGreen"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginBottom="20dip"/>

    </RelativeLayout>

</RelativeLayout>