<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <include
        layout="@layout/header_logout"
        android:id="@+id/header" />

    <!-- Login Form -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
            <!--  Password Label -->

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_below="@id/emailField"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:password="true"
                android:hint="@string/password" />
            <!-- Login button -->
            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginTop="10dip"
                android:layout_below="@id/passwordField"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:gravity="center"
                android:background="@color/jewelPink" />
            <!-- Link to Registration Screen -->

            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_below="@id/btnLogin"
                android:text="@string/create_account"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="@color/gray"/>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>